# High_score_Game

./: CMakeLists.txt  High_Score.files  MainWindow.h  MainWindow.ui  Makefile  README.md  click_me.cpp  click_me.h  designerform.cpp  designerform.h  game.cpp  game.h  mainwindow.cpp  score.cpp  score.h
